@@ -1,5 +1,8 @@
 Release Notes
 
+* 1/14/2016
+  * changed setScoutJobData so that tasks go to exhausted when execution time is unexpectedly too long
+
 * 1/5/2016
   * changed restartTasksForCF to restart ready tasks with defined DSs
 
